--- a/Main/SEToolbox/SEToolboxUpdate/SEToolboxUpdate.csproj
+++ b/Main/SEToolbox/SEToolboxUpdate/SEToolboxUpdate.csproj
@@ -114,6 +114,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.zh.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.manifest" />
