Sync changes to dev branch, and fixed previous bad sync. Uncessful attempt to get texture decode working. It appears to be a SRGB decode issue.

--- a/Dev/SEToolbox/ToolboxTest/ToolboxTest.csproj
+++ b/Dev/SEToolbox/ToolboxTest/ToolboxTest.csproj
@@ -177,6 +177,9 @@
     <Content Include="TestAssets\7242630_scale432.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="TestAssets\ExplosivesComponent.dds">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="TestAssets\test.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
