#29 Asteroid/Voxel code update. Opens access to the current voxel format used by the game, by directly using the game API. This also removes existing licenced MinerWars code in SEToolbox which was previously utilized to read the voxel files.

--- a/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
+++ b/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
@@ -151,7 +151,6 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="TypeLoaderTests.cs" />
     <Compile Include="VoxelVolumeTests.cs" />
     <Compile Include="TextureTests.cs" />
     <Compile Include="InteropTests.cs" />
@@ -201,6 +200,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TestAssets\AsteroidV1Format.vx2">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="TestAssets\AsteroidV3Format.vx2">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="TestAssets\buddha-fixed-bottom.stl">
