--- a/Main/SEToolbox/SEToolbox/packages.config
+++ b/Main/SEToolbox/SEToolbox/packages.config
@@ -3,6 +3,6 @@
   <package id="ICSharpCode.SharpZipLib.Patched" version="0.86.5" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
-  <package id="WpfLocalizeExtension" version="2.3.2" targetFramework="net461" />
-  <package id="XAMLMarkupExtensions" version="1.2.2" targetFramework="net461" />
+  <package id="WPFLocalizeExtension" version="3.1.2" targetFramework="net461" />
+  <package id="XAMLMarkupExtensions" version="1.3.0" targetFramework="net461" />
 </packages>
