--- a/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
+++ b/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
@@ -74,6 +74,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DxtUtilTexture.cs" />
     <Compile Include="Effects\AlphaPixelEffect.cs" />
     <Compile Include="Effects\MaskPixelEffect.cs" />
     <Compile Include="Effects\EmissivePixelEffect.cs" />
