--- a/Main/SEToolbox/SEToolboxUpdate/SEToolboxUpdate.csproj
+++ b/Main/SEToolbox/SEToolboxUpdate/SEToolboxUpdate.csproj
@@ -96,6 +96,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.de.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.zh-cn.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
