--- a/Dev/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Dev/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -157,6 +157,12 @@
     <Reference Include="VRage.Render11">
       <HintPath>$(BinPath)\VRage.Render11.dll</HintPath>
     </Reference>
+    <Reference Include="VRage.Steam">
+      <HintPath>$(BinPath)\VRage.Steam.dll</HintPath>
+    </Reference>
+    <Reference Include="Steamworks.NET">
+      <HintPath>$(BinPath)\Steamworks.NET.dll</HintPath>
+    </Reference>
     <ProjectReference Include="..\SEToolbox.Image.Library\SEToolbox.ImageLibrary.csproj">
       <Project>{e78476cb-bc3d-4265-806d-96f09229a449}</Project>
       <Name>SEToolbox.ImageLibrary</Name>
@@ -205,8 +211,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Interfaces\IMainView.cs" />
+    <Compile Include="Interop\SpaceEngineersWorkshop.cs" />
     <Compile Include="Interop\MySessionReplacement.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelRayTracerConsts.cs" />
+    <Compile Include="Interop\MySteamService.cs" />
     <Compile Include="Interop\QuaternionD.cs" />
     <Compile Include="Interop\SpaceEngineersTypes.cs" />
     <Compile Include="Interop\SpaceEngineersResources.cs" />
