--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -94,6 +94,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
@@ -136,20 +137,23 @@
     <Reference Include="System.Data.SQLite">
       <HintPath>$(BinPath)\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="netstandard">
+      <HintPath>$(BinPath)\netstandard.dll</HintPath>
+    </Reference>
     <Reference Include="VRage">
       <HintPath>$(BinPath)\VRage.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Game">
       <HintPath>$(BinPath)\VRage.Game.dll</HintPath>
     </Reference>
+    <Reference Include="VRage.Input">
+      <HintPath>$(BinPath)\VRage.Input.dll</HintPath>
+    </Reference>
     <Reference Include="VRage.Library">
       <HintPath>$(BinPath)\VRage.Library.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Math">
       <HintPath>$(BinPath)\VRage.Math.dll</HintPath>
-    </Reference>
-    <Reference Include="VRage.Native">
-      <HintPath>$(BinPath)\VRage.Native.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Render">
       <HintPath>$(BinPath)\VRage.Render.dll</HintPath>
@@ -211,6 +215,7 @@
     <Compile Include="Interop\SpaceEngineersTypes.cs" />
     <Compile Include="Interop\SpaceEngineersResources.cs" />
     <Compile Include="Interop\SpaceEngineersRepair.cs" />
+    <Compile Include="Interop\ToolboxPlatform.cs" />
     <Compile Include="Interop\VoxelMapLoader.cs" />
     <Compile Include="Models\Asteroids\AsteroidByteFiller.cs" />
     <Compile Include="Models\Asteroids\AsteroidSeedFiller.cs" />
@@ -887,6 +892,10 @@
   <ItemGroup>
     <Content Include="$(BinPath)\steam_api64.dll">
       <Link>steam_api64.dll</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="$(BinPath)\VRage.Native.dll">
+      <Link>VRage.Native.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Resources\earth.png" />
