--- a/Dev/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Dev/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SEToolbox</RootNamespace>
     <AssemblyName>SEToolbox</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -83,7 +83,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.IO.Compression, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
@@ -127,9 +127,6 @@
     </Reference>
     <Reference Include="System.Data.SQLite">
       <HintPath>$(BinPath)\System.Data.SQLite.dll</HintPath>
-    </Reference>
-    <Reference Include="netstandard">
-      <HintPath>$(BinPath)\netstandard.dll</HintPath>
     </Reference>
     <Reference Include="VRage">
       <HintPath>$(BinPath)\VRage.dll</HintPath>
@@ -794,7 +791,7 @@
       <Version>2.0.8</Version>
     </PackageReference>
     <PackageReference Include="Octokit">
-      <Version>0.32.0</Version>
+      <Version>0.47.0</Version>
     </PackageReference>
     <PackageReference Include="System.ComponentModel.Annotations">
       <Version>4.5.0</Version>
@@ -803,7 +800,7 @@
       <Version>2.0.20525</Version>
     </PackageReference>
     <PackageReference Include="WPFLocalizeExtension">
-      <Version>3.1.2</Version>
+      <Version>3.5.0</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
