--- a/Dev/SEToolbox/ToolboxTest/App.config
+++ b/Dev/SEToolbox/ToolboxTest/App.config
@@ -1,8 +1,5 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
-  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -17,19 +14,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
-  </startup>
-  <log4net>
-    <appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
-      <applicationName value="SEToolbox.exe"/>
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline"/>
-      </layout>
-    </appender>
-    <root>
-      <level value="All"/>
-      <appender-ref ref="EventLogAppender"/>
-    </root>
-  </log4net>
 </configuration>
